build windows: fix macro for MNNTrain target
* add missing MNN_PUBLIC

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+winbuild
 
 # Created by https://www.gitignore.io/api/python,cmake,xcode,androidstudio
 # Edit at https://www.gitignore.io/?templates=python,cmake,xcode,androidstudio
