non msvc: enable rtti to resolve typeinfo issue

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 winbuild
+macosbuild
 
 # Created by https://www.gitignore.io/api/python,cmake,xcode,androidstudio
 # Edit at https://www.gitignore.io/?templates=python,cmake,xcode,androidstudio
