--- a/tools/converter/CMakeLists.txt
+++ b/tools/converter/CMakeLists.txt
@@ -46,7 +46,7 @@ IF(MNN_BUILD_CONVERTER)
   )
   IF(MNN_BUILD_SHARED_LIBS)
     add_library(MNNConvertDeps SHARED ${COMMON_SRC} ${MNN_CONVERTER_BACKENDS_OBJECTS} ${CMAKE_CURRENT_LIST_DIR}/../../3rd_party/flatbuffers/src/util.cpp $<TARGET_OBJECTS:MNNUtils>)
-    add_dependencies(MNNConvertDeps MNN)
+    target_link_libraries(MNNConvertDeps PRIVATE MNN_Express)
   ELSE()
     add_library(MNNConvertDeps STATIC ${COMMON_SRC} ${MNN_CONVERTER_BACKENDS_OBJECTS} ${CMAKE_CURRENT_LIST_DIR}/../../3rd_party/flatbuffers/src/util.cpp)
   ENDIF()
