add finding cudnn and cublas from none-system path

--- a/source/backend/cuda/CMakeLists.txt
+++ b/source/backend/cuda/CMakeLists.txt
@@ -9,6 +9,24 @@ if(CUDA_FOUND)
     set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -D_FORCE_INLINES -Wno-deprecated-gpu-targets -w -O2")
     message(STATUS "Enabling CUDA support (version: ${CUDA_VERSION_STRING},"
                     " archs: ${CUDA_ARCH_FLAGS_readable})")
+
+    # first search cublas from CUDA_TOOLKIT_ROOT_DIR
+    find_library(CUBLAS_LIBRARY cublas 
+        ${CUDA_TOOLKIT_ROOT_DIR}/lib64 
+        ${CUDA_TOOLKIT_ROOT_DIR}/lib 
+        NO_DEFAULT_PATH)
+
+    # search default path if cannot find cublas in non-default
+    find_library(CUBLAS_LIBRARY cublas)            
+
+    # first search cudnn from CUDA_TOOLKIT_ROOT_DIR
+    find_library(CUDNN_LIBRARY cudnn
+        ${CUDA_TOOLKIT_ROOT_DIR}/lib64
+        ${CUDA_TOOLKIT_ROOT_DIR}/lib
+        NO_DEFAULT_PATH)
+    # search default path if cannot find cudnn in non-default
+    find_library(CUDNN_LIBRARY cudnn)    
+
 else()
     message(FATAL_ERROR "CUDA not found >= ${CUDA_MIN_VERSION} required)")
 endif()
@@ -18,11 +36,10 @@ message(STATUS "message ${CUDA_NVCC_FLAGS} !!!!!!!!!!!")
 
 # add_library(MNN_Cuda SHARED ${MNN_CUDA_SRC} )
 cuda_add_library(MNN_Cuda_Main SHARED ${MNN_CUDA_SRC} )
-set(MNN_CUDA_LIBS MNN_Cuda_Main cudnn cublas PARENT_SCOPE)
+set(MNN_CUDA_LIBS MNN_Cuda_Main ${CUDNN_LIBRARY} ${CUBLAS_LIBRARY} PARENT_SCOPE)
 add_library(MNN_CUDA OBJECT Register.cpp)
 
 include_directories(
     ${CUDA_INCLUDE_DIRS}
     ${CMAKE_SOURCE_DIR}/include/
 )
-
