fix(AVX512): fix compile error when MNN_AVX512 option is open on Windows

--- a/source/backend/cpu/x86_x64/CMakeLists.txt
+++ b/source/backend/cpu/x86_x64/CMakeLists.txt
@@ -47,7 +47,7 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)
         endif()
     endif()
     list(APPEND MNN_OBJECTS_TO_LINK $<TARGET_OBJECTS:MNNX8664> $<TARGET_OBJECTS:MNNAVXFMA> $<TARGET_OBJECTS:MNNAVX> $<TARGET_OBJECTS:MNNSSE>)
-    if (MNN_AVX512)
+    if (MNN_AVX512 AND NOT MSVC)
         target_compile_options(MNNCPU PRIVATE -DMNN_AVX512)
         target_compile_options(MNNX8664 PRIVATE -DMNN_AVX512)
         if (MNN_AVX512_VNNI)
