Add compute_53 and sm_53 for Jetson Nano

--- a/source/backend/cuda/CMakeLists.txt
+++ b/source/backend/cuda/CMakeLists.txt
@@ -42,6 +42,7 @@ endif()
         set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -Xcompiler /FS")
     endif ()
     set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}
+        -gencode arch=compute_53,code=sm_53
         -gencode arch=compute_70,code=sm_70
         -gencode arch=compute_75,code=sm_75
     )
