[MNN:Sync] Sync internal Gitlab to 2.0.2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ option(MNN_BUILD_TOOLS "Build tools/cpp or not" ON)
 option(MNN_BUILD_QUANTOOLS "Build Quantized Tools or not" OFF)
 option(MNN_EVALUATION "Build Evaluation Tools or not" OFF)
 option(MNN_BUILD_CONVERTER "Build Converter" OFF)
-option(MNN_SUPPORT_TFLITE_QUAN "Enable MNN's tflite quantized op" ON)
+option(MNN_SUPPORT_DEPRECATED_OP "Enable MNN's tflite quantized op" ON)
 option(MNN_DEBUG_MEMORY "MNN Debug Memory Access" OFF)
 option(MNN_DEBUG_TENSOR_SIZE "Enable Tensor Size" OFF)
 option(MNN_GPU_TRACE "Enable MNN Gpu Debug" OFF)
@@ -164,8 +164,8 @@ ENDIF()
 if(MNN_FORBID_MULTI_THREAD)
     add_definitions(-DMNN_FORBIT_MULTI_THREADS)
 endif()
-if(MNN_SUPPORT_TFLITE_QUAN)
-    add_definitions(-DMNN_SUPPORT_TFLITE_QUAN)
+if(MNN_SUPPORT_DEPRECATED_OP)
+    add_definitions(-DMNN_SUPPORT_DEPRECATED_OP)
 endif()
 
 # debug options
