--- a/tools/cv/test/CMakeLists.txt
+++ b/tools/cv/test/CMakeLists.txt
@@ -19,10 +19,13 @@ include_directories(${CMAKE_CURRENT_LIST_DIR}/)
 enable_testing()
 
 file(GLOB_RECURSE IMGPROC_SRC ${CMAKE_CURRENT_LIST_DIR}/imgproc/*.cpp)
+if(MNN_CALIB3D)
+    file(GLOB_RECURSE CALIB3D_SRC ${CMAKE_CURRENT_LIST_DIR}/calib3d/*.cpp)
+endif()
 if(MNN_IMGCODECS)
     file(GLOB_RECURSE IMGCODECS_SRC ${CMAKE_CURRENT_LIST_DIR}/imgcodecs/*.cpp)
 endif()
-add_executable(opencv_test ${IMGPROC_SRC} ${IMGCODECS_SRC} ./opencv_test.cpp)
+add_executable(opencv_test ${IMGPROC_SRC} ${CALIB3D_SRC} ${IMGCODECS_SRC} ./opencv_test.cpp)
 target_link_libraries(opencv_test MNNOpenCV gtest_main ${OpenCV_LIBS})
 
 include(GoogleTest)
