--- a/pymnn/CMakeLists.txt
+++ b/pymnn/CMakeLists.txt
@@ -76,6 +76,9 @@ endif()
 if(PYMNN_IMGPROC_FILTER)
     target_compile_definitions(mnnpybridge PRIVATE PYMNN_IMGPROC_FILTER)
 endif()
+if(PYMNN_CALIB3D)
+    target_compile_definitions(mnnpybridge PRIVATE PYMNN_CALIB3D)
+endif()
 
 if(PYMNN_INTERNAL_SERVING)
     message(STATUS "mnnpybridge define PYMNN_INTERNAL_SERVING")
