[MNN:Sync] Sync Internal 2.1.1 contain below changes.     [Pymnn:Bugfix] Fix usage and small bug in pymnn.     [Docs:Update] Update docs/cpp markdown     [Docs:Update] Add docs check.     [MNN:Update] Update VecHalf.hpp     [MNN:Bugfix] Fix compile errors caused by "#define MNN_THREAD_LOCK_CPU"     [Geometry:Bugfix] Fix bug for resize of broadcastto: https://github.com/alibaba/MNN/issues/2040     [Docs:Update] Update inference api usage.     [Pymnn:Bugfix] Close hiai load to fix resource leak.     [MNN:Update] Down gradle version for demo compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -473,9 +473,11 @@ IF(MNN_COREML)
     find_library(COREML CoreML)
     find_library(FOUNDATION Foundation)
     find_library(METAL Metal)
+    find_library(VIDEO CoreVideo)
     list(APPEND MNN_EXTRA_DEPENDS ${COREML})
     list(APPEND MNN_EXTRA_DEPENDS ${FOUNDATION})
     list(APPEND MNN_EXTRA_DEPENDS ${METAL})
+    list(APPEND MNN_EXTRA_DEPENDS ${VIDEO})
 ENDIF()
 
 # Vulkan
