feat(cmake): add feature to cross-compile x86_64/arm64 on macOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,17 @@ endif()
 if(POLICY CMP0091)
   cmake_policy(SET CMP0091 NEW)
 endif()
+
+if(MNN_BUILD_OSX_CROSSCOMPILING)
+set(CMAKE_SYSTEM_PROCESSOR_BACKUP ${CMAKE_SYSTEM_PROCESSOR})
+endif()
+
 project(MNN VERSION ${MNN_VERSION} LANGUAGES C CXX ASM)
+
+if(MNN_BUILD_OSX_CROSSCOMPILING)
+set(CMAKE_SYSTEM_PROCESSOR ${CMAKE_SYSTEM_PROCESSOR_BACKUP})
+endif()
+
 # complier options
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_STANDARD 11)
