--- a/tools/train/transformConfig.json
+++ b/tools/train/transformConfig.json
@@ -6,6 +6,7 @@
     "Optimizor": {
         "OnlyUpdateOps":[],
         "NoUpdateOps":[],
+        "StopBackPropOps":[],
         "type": "SGD"
     },
     "Debug": {
