[MNN:Sync] A few bugfixes     1. 支持 Onnx If 空子图的情况（这种情况是条件判断一定为真或假）     2. 修正 Where 算子在 zeroshape 下维度计算出错的问题     3. 修正 Reduce 计算 zeroshape 的非 prod 情况     4. 修正 arch64-linux 上编译错误     5. 修正 头文件 NNAPI 的注释错误     6, 部分训练相关问题修正

--- a/tools/train/transformConfig.json
+++ b/tools/train/transformConfig.json
@@ -9,6 +9,9 @@
         "StopBackPropOps":[],
         "type": "SGD"
     },
+    "BatchNorm": {
+        "momentum":0.99
+    },
     "Debug": {
         "L2Norm": []
     },
