[MNN:Sync] Sync Internal Gitlab: 2.5.1

--- a/source/backend/cuda/CMakeLists.txt
+++ b/source/backend/cuda/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CUDA_MIN_VERSION "7.0")
+set(CUDA_MIN_VERSION "8.0")
 find_package(CUDA ${CUDA_MIN_VERSION})
 
 set (EXTRA_LIBS "")
@@ -21,6 +21,16 @@ if(CUDA_FOUND)
     include(${CMAKE_CURRENT_SOURCE_DIR}/SelectCudaComputeArch.cmake)
     CUDA_SELECT_NVCC_ARCH_FLAGS(CUDA_ARCH_FLAGS ${CUDA_ARCHS})
 
+    list(LENGTH CUDA_ARCH_FLAGS_readable_code arch_count)
+    # Current Supported Arch List 
+    IF (${arch_count} EQUAL 1)
+        set(support_archs 60 61 62 70 72 75 80 86)
+        list(FIND support_archs ${CUDA_ARCH_FLAGS_readable_code} list_index)
+        IF (${list_index} EQUAL -1)
+            message(FATAL_ERROR "Please add your own sm arch ${CUDA_ARCH_FLAGS_readable_code} to CmakeLists.txt!")
+        ENDIF()
+    ENDIF()
+
     IF ((CUDA_VERSION VERSION_GREATER "8.0") OR (CUDA_VERSION VERSION_EQUAL "8.0"))
         set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -gencode arch=compute_60,code=sm_60")
         set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -gencode arch=compute_61,code=sm_61")
@@ -39,6 +49,27 @@ if(CUDA_FOUND)
     IF ((CUDA_VERSION VERSION_GREATER "11.2") OR (CUDA_VERSION VERSION_EQUAL "11.2"))
         set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -gencode arch=compute_80,code=sm_80")
         set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -gencode arch=compute_86,code=sm_86")
+    ENDIF()
+
+    # Limit minimum cuda version for each archs
+    IF (${arch_count} EQUAL 1)
+        IF ((CUDA_ARCH_FLAGS_readable_code VERSION_GREATER "80") OR (CUDA_ARCH_FLAGS_readable_code VERSION_EQUAL "80"))
+            IF (CUDA_VERSION VERSION_LESS "11.2")
+                message(FATAL_ERROR "Please update cuda version to 11.2 or higher!")
+            ENDIF()
+        ENDIF()
+
+        IF ((CUDA_ARCH_FLAGS_readable_code VERSION_GREATER "75") OR (CUDA_ARCH_FLAGS_readable_code VERSION_EQUAL "75"))
+            IF (CUDA_VERSION VERSION_LESS "10.2")
+                message(FATAL_ERROR "Please update cuda version to 10.2 or higher!")
+            ENDIF()
+        ENDIF()
+
+        IF ((CUDA_ARCH_FLAGS_readable_code VERSION_GREATER "70") OR (CUDA_ARCH_FLAGS_readable_code VERSION_EQUAL "70"))
+            IF (CUDA_VERSION VERSION_LESS "10.1")
+                message(FATAL_ERROR "Please update cuda version to 10.1 or higher!")
+            ENDIF()
+        ENDIF()
     ENDIF()
 
     message(STATUS "Enabling CUDA support (version: ${CUDA_VERSION_STRING},"
