fix apple static build error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -771,7 +771,11 @@ if (NOT MNN_BUILD_SHARED_LIBS)
         if(CMAKE_SYSTEM_NAME MATCHES "^Linux")
             set(MNN_DEPS -Wl,--whole-archive ${MNN_DEPS} -lpthread -Wl,--no-whole-archive)
         else()
+          if(APPLE)
+            set(MNN_DEPS -Wl,-force_load ${MNN_DEPS})
+          else()
             set(MNN_DEPS -Wl,--whole-archive ${MNN_DEPS} -Wl,--no-whole-archive)
+          endif()
         endif()
     endif()
 endif()
