--- a/transformers/llm/engine/android/app/src/main/AndroidManifest.xml
+++ b/transformers/llm/engine/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation= "portrait"
+            android:exported="false"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
