--- a/.github/workflows/pymnn_release.yml
+++ b/.github/workflows/pymnn_release.yml
@@ -16,6 +16,7 @@ jobs:
       matrix:
         include:
           - { os: ubuntu-latest,    arch: x86_64,     build: 'cp*-manylinux*' }
+          - { os: ubuntu-latest,    arch: aarch64,    build: 'cp*-manylinux*' }
           - { os: windows-latest,   arch: AMD64,      build: 'cp*'          }
           - { os: macos-13,         arch: x86_64,     build: 'cp*'          }
           - { os: macos-14,         arch: arm64,      build: 'cp*'          }
@@ -32,6 +33,12 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.12'
+
+    - name: set up qemu
+      if: matrix.os == 'ubuntu-latest' && matrix.arch == 'aarch64'
+      uses: docker/setup-qemu-action@v3
+      with:
+        platforms: all
 
     - name: install pipx
       if: matrix.os == 'macos-14'
