--- a/.github/workflows/pymnn_release.yml
+++ b/.github/workflows/pymnn_release.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
-        name: artifact-${{ matrix.arch }}-${{ matrix.arch }}
+        name: artifact-${{ matrix.os }}-${{ matrix.arch }}
         path: wheelhouse/*.whl
 
   publish_wheels:
