[MNN:CI] add merge-multiple in download-artifact

--- a/.github/workflows/mnn_release.yml
+++ b/.github/workflows/mnn_release.yml
@@ -150,6 +150,7 @@ jobs:
       with:
         pattern: artifact-*
         path: assert
+        merge-multiple: true
 
     - name: show file
       run: ls assert
