--- a/.github/workflows/pymnn_release.yml
+++ b/.github/workflows/pymnn_release.yml
@@ -88,6 +88,7 @@ jobs:
       with:
         pattern: artifact-*
         path: dist
+        merge-multiple: true
 
     - uses: pypa/gh-action-pypi-publish@release/v1
       with:
