--- a/source/backend/cpu/x86_x64/CMakeLists.txt
+++ b/source/backend/cpu/x86_x64/CMakeLists.txt
@@ -101,14 +101,18 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)
     if (MNN_LOW_MEMORY)
         target_compile_options(MNNX8664 PRIVATE -DMNN_LOW_MEMORY)
         target_compile_options(MNNSSE PRIVATE -DMNN_LOW_MEMORY)
-        target_compile_options(MNNAVX PRIVATE -DMNN_LOW_MEMORY)
-        target_compile_options(MNNAVXFMA PRIVATE -DMNN_LOW_MEMORY)
+        if (MNN_AVX2)
+            target_compile_options(MNNAVX PRIVATE -DMNN_LOW_MEMORY)
+            target_compile_options(MNNAVXFMA PRIVATE -DMNN_LOW_MEMORY)
+        endif()
     endif()
     if (MNN_CPU_WEIGHT_DEQUANT_GEMM)
         target_compile_options(MNNX8664 PRIVATE -DMNN_CPU_WEIGHT_DEQUANT_GEMM)
         target_compile_options(MNNSSE PRIVATE -DMNN_CPU_WEIGHT_DEQUANT_GEMM)
-        target_compile_options(MNNAVX PRIVATE -DMNN_CPU_WEIGHT_DEQUANT_GEMM)
-        target_compile_options(MNNAVXFMA PRIVATE -DMNN_CPU_WEIGHT_DEQUANT_GEMM)
+        if (MNN_AVX2)
+            target_compile_options(MNNAVX PRIVATE -DMNN_CPU_WEIGHT_DEQUANT_GEMM)
+            target_compile_options(MNNAVXFMA PRIVATE -DMNN_CPU_WEIGHT_DEQUANT_GEMM)
+        endif()
     endif()
     list(APPEND MNN_OBJECTS_TO_LINK $<TARGET_OBJECTS:MNNX8664> $<TARGET_OBJECTS:MNNSSE>)
     if (MNN_AVX2)
