--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -700,13 +700,28 @@ IF(MNN_TENSORRT)
   list(APPEND MNN_OBJECTS_TO_LINK $<TARGET_OBJECTS:MNN_TRT>)
   list(APPEND MNN_EXTRA_DEPENDS ${MNN_TRT_LIBS})
 ENDIF()
-
+IF(MNN_BUILD_OPENCV)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/tools/cv)
+IF(MNN_SEP_BUILD)
+    list(APPEND MNN_DEPS MNNOpenCV)
+ELSE()
+    list(APPEND MNN_TARGETS MNNOpenCV)
+    list(APPEND MNN_OBJECTS_TO_LINK $<TARGET_OBJECTS:MNNOpenCV>)
+ENDIF()
+ENDIF()
 IF(MNN_BUILD_LLM)
     # add_definitions(-DMNN_BUILD_LLM)
     include(${CMAKE_CURRENT_LIST_DIR}/transformers/llm/engine/CMakeLists.txt)
     IF(NOT MNN_SEP_BUILD)
       list(APPEND MNN_TARGETS llm)
       list(APPEND MNN_OBJECTS_TO_LINK $<TARGET_OBJECTS:llm>)
+    ENDIF()
+ENDIF()
+IF(MNN_BUILD_DIFFUSION AND MNN_BUILD_OPENCV AND MNN_IMGCODECS)
+    include(${CMAKE_CURRENT_LIST_DIR}/transformers/diffusion/engine/CMakeLists.txt)
+    IF(NOT MNN_SEP_BUILD)
+      list(APPEND MNN_TARGETS diffusion)
+      list(APPEND MNN_OBJECTS_TO_LINK $<TARGET_OBJECTS:diffusion>)
     ENDIF()
 ENDIF()
 
@@ -774,13 +789,7 @@ IF(WIN32 AND MNN_BUILD_CONVERTER AND MNN_BUILD_SHARED_LIBS)
   target_link_libraries(MNN PUBLIC ${Protobuf_LIBRARIES})
 ENDIF()
 # Merge MNN/MNNExpress/MNNOpenCV and other backends into one .lib/.dll on Windows
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/tools/cv)
-IF(MNN_BUILD_OPENCV AND NOT MNN_SEP_BUILD)
-  IF(MSVC)
-    target_compile_definitions(MNNOpenCV PRIVATE "-DBUILDING_MNN_DLL" INTERFACE "-DUSING_MNN_DLL")
-  ENDIF()
-  target_sources(MNN PRIVATE $<TARGET_OBJECTS:MNNOpenCV>)
-ENDIF()
+
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/tools/audio)
 IF(MNN_BUILD_AUDIO AND NOT MNN_SEP_BUILD)
   IF(MSVC)
@@ -819,9 +828,6 @@ list(APPEND MNN_TARGETS MNN)
 list(REMOVE_ITEM MNN_TARGETS MNN)
 IF(MNN_BUILD_DEMO)
 include(${CMAKE_CURRENT_LIST_DIR}/demo/exec/CMakeLists.txt)
-ENDIF()
-IF(MNN_BUILD_DIFFUSION AND MNN_BUILD_OPENCV AND MNN_IMGCODECS)
-include(${CMAKE_CURRENT_LIST_DIR}/transformers/diffusion/CMakeLists.txt)
 ENDIF()
 IF(MNN_BUILD_TOOLS)
 include(${CMAKE_CURRENT_LIST_DIR}/tools/cpp/CMakeLists.txt)
