optimized for deepseek r1, add support for markdown fix sime bugs

--- a/project/android/apps/MnnLlmApp/app/src/main/AndroidManifest.xml
+++ b/project/android/apps/MnnLlmApp/app/src/main/AndroidManifest.xml
@@ -44,6 +44,15 @@
             android:foregroundServiceType="dataSync"
             />
 
+        <activity android:name=".chat.SelectTextActivity"
+            android:theme="@style/Theme.MnnLlmApp"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".MainActivity"
             android:exported="true"
             android:configChanges="orientation|screenSize">
