解决mls crash，解决选择文本不正确问题

--- a/project/android/apps/MnnLlmApp/app/build.gradle
+++ b/project/android/apps/MnnLlmApp/app/build.gradle
@@ -83,4 +83,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation "io.noties.markwon:core:4.6.2"
+    implementation "io.noties.markwon:ext-latex:4.6.2"
+    implementation 'ru.noties:jlatexmath-android:0.2.0'
+    implementation 'ru.noties:jlatexmath-android-font-cyrillic:0.2.0'
+    implementation 'ru.noties:jlatexmath-android-font-greek:0.2.0'
 }
