--- a/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.MnnLlmChat"
         tools:targetApi="31">
         <uses-native-library android:name="libOpenCL.so"
-            android:required="true"/>
+            android:required="false"/>
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
