add settings activity

--- a/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
@@ -77,6 +77,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:exported="true"
+            android:name=".modelsettings.SettingsActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
